# memory-friendly-database-streaming

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
